@@ -1,3 +1,3 @@
-build/dri/${DEB_HOST_MULTIARCH}/gallium/nouveau_dri.so usr/lib/${DEB_HOST_MULTIARCH}/dri
-build/dri/${DEB_HOST_MULTIARCH}/gallium/nouveau_vieux_dri.so usr/lib/${DEB_HOST_MULTIARCH}/dri
+build/dri/lib/gallium/nouveau_dri.so usr/lib/${DEB_HOST_MULTIARCH}/dri
+build/dri/lib/gallium/nouveau_vieux_dri.so usr/lib/${DEB_HOST_MULTIARCH}/dri
 
