@@ -284,7 +284,7 @@ binary-arch: install
 
 	# Move nouveau_vieux alongside nouveau to install in dri-experimental package
 ifneq (,$(filter nouveau,$(DRI_DRIVERS)))
-	mv build/dri/nouveau_vieux_dri.so build/dri/gallium/
+	mv build/dri/lib/nouveau_vieux_dri.so build/dri/lib/gallium/
 endif
 
 	# Also get rid of other files which aren't installed. Do not
